--- a/tetrapak-publicweb/ui.dev/src/source/templates/components/teaser/_teaser.scss
+++ b/tetrapak-publicweb/ui.dev/src/source/templates/components/teaser/_teaser.scss
@@ -17,19 +17,21 @@
             @include margin-bottom($margin-l);
             @media #{$desktop} {
                 @include margin-bottom($margin-l);
+                @include padding-left($margin-l);
+                @include padding-right($margin-l);
             }
         }
         .teaserMarginL {
             @include margin-bottom($margin-l);
             @media #{$desktop} {
                 @include margin-bottom($margin-xl);
+                @include padding-left($margin-l);
+                @include padding-right($margin-l);
             }
         }
         .rightbar {
             border: 0 solid $color-mercury;
             @media #{$desktop} {
-                @include padding($padding-xxxl);
-                @include margin($margin-xxxl);
                 border-right-width: 1px;
             }
         }
